static/css/custom.css
.atx25 .atx22 .atx23 .atx24 .cdmx22 .floripa .berlin24 .berlin23 .ba24 {
	color: #fff;
	background-color: rgb(245 158 11/var(--tw-bg-opacity,1));
}

.atx25:hover .atx22:hover .atx23:hover .atx24:hover .cdmx22:hover .floripa:hover .berlin24:hover .berlin23:hover .ba24:hover {
	color: rgb(146 64 14/var(--tw-text-opacity,1));
	background-color: rgb(252 211 77/var(--tw-bg-opacity,1));
}

.atx25:focus-visible .atx22:focus-visible .atx23:focus-visible .atx24:focus-visible .cdmx22:focus-visible .floripa:focus-visible .berlin24:focus-visible .berlin23:focus-visible .ba24:focus-visible {
	outline-color: #fcd34d;
}

.atx25-color .atx22-color .atx23-color .atx24-color .cdmx22-color .floripa-color .berlin24-color .berlin23-color .ba24-color {
	color: rgb(245 158 11/var(--tw-bg-opacity,1));
}

.floripa26 .vegas .vienna .nairobi .toronto .berlin26 .seoul {
	color: #fff;
	background-color: rgb(245 158 11/var(--tw-bg-opacity,1));
}

.floripa26:hover .vegas:hover .vienna:hover .nairobi:hover .toronto:hover .berlin26:hover .seoul:hover {
	color: rgb(146 64 14/var(--tw-text-opacity,1));
	background-color: rgb(252 211 77/var(--tw-bg-opacity,1));
}

.floripa26:focus-visible .vegas:focus-visible .vienna:focus-visible .nairobi:focus-visible .toronto:focus-visible .berlin26:focus-visible .seoul:focus-visible {
	outline-color: #fcd34d;
}

.floripa26-color .vegas-color .vienna-color .nairobi-color .toronto-color .berlin26-color .seoul-color {
	color: rgb(245 158 11/var(--tw-bg-opacity,1));
}


.riga {
	color: #fff;
	background-color: rgb(245 158 11/var(--tw-bg-opacity,1));
}

.riga:hover {
	color: rgb(146 64 14/var(--tw-text-opacity,1));
	background-color: rgb(252 211 77/var(--tw-bg-opacity,1));
}

.riga:focus-visible {
	outline-color: #fcd34d;
}

.riga-color {
	color: rgb(245 158 11/var(--tw-bg-opacity,1));
}

.berlin25 {
	color: #fff;
	background-color: rgb(133 77 14/var(--tw-bg-opacity,1));
}

.berlin25:hover {
	color: oklch(27.4% 0.006 286.033);
	background-color: oklch(97.3% 0.071 103.193);
}

.berlin25:focus-visible {
	outline-color: oklch(97.3% 0.071 103.193);
}

.berlin25-color {
	color: rgb(133 77 14/var(--tw-bg-opacity,1));
}

.istanbul {
	color: #fff;
	background-color: rgb(132 204 22/var(--tw-bg-opacity,1));
}

.istanbul:hover {
	color: rgb(132 204 22/var(--tw-text-opacity,1));
	background-color: rgb(190 242 100/var(--tw-bg-opacity,1));
}

.istanbul:focus-visible {
	outline-color: #bef264;
}

.istanbul-color {
	color: rgb(132 204 22/var(--tw-bg-opacity,1));
}

.taipei {
	color: #fff;
	background-color: rgb(153 27 27/var(--tw-bg-opacity,1));
}

.taipei:hover {
	color: rgb(153 27 27/var(--tw-text-opacity,1));
	background-color: rgb(252 165 165/var(--tw-bg-opacity,1));
}

.taipei:focus-visible {
	outline-color: #fca5a5;
}

.taipei-color {
	color: rgb(153 27 27/var(--tw-bg-opacity,1));
}

.durham {
	color: #fff;
	background-color: rgb(31 154 143/var(--tw-bg-opacity,1));
}

.durham:hover {
	background-color: rgb(91 222 211/var(--tw-bg-opacity,1));
}

.durham:focus-visible {
	outline-color: #28c4c4;
}

.durham-color {
	color: rgb(31 154 143/var(--tw-text-opacity,1));
}

.bitcoin-color {
        color: #FFA800;
}


@media (min-width: 1024px) {
	.atx25-text .atx22-text .atx23-text .atx24-text .cdmx22-text .floripa-text .berlin24-text .berlin23-text .ba24-text {
		color: rgb(245 158 11/var(--tw-bg-opacity,1));
	}

	.atx25-text:hover .atx22-text:hover .atx23-text:hover .atx24-text:hover .cdmx22-text:hover .floripa-text:hover .berlin24-text:hover .berlin23-text:hover .ba24-text:hover {
		color: rgb(252 211 77/var(--tw-bg-opacity,1));
	}

        .floripa26-text .vegas-text .vienna-text .nairobi-text .toronto-text .berlin26-text .seoul-text {
		color: rgb(245 158 11/var(--tw-bg-opacity,1));
	}

        .floripa26-text:hover .vegas-text:hover .vienna-text:hover .nairobi-text:hover .toronto-text:hover .berlin26-text:hover .seoul-text:hover {
		color: rgb(252 211 77/var(--tw-bg-opacity,1));
	}

	.riga-text {
		color: rgb(245 158 11/var(--tw-bg-opacity,1));
	}

	.riga-text:hover {
		color: rgb(252 211 77/var(--tw-bg-opacity,1));
	}

	.istanbul-text {
		color: rgb(132 204 22/var(--tw-bg-opacity,1));
	}

	.istanbul-text:hover {
		color: rgb(190 242 100/var(--tw-bg-opacity,1));
	}

	.berlin25-text {
		color: rgb(133 77 14/var(--tw-bg-opacity,1));
	}

	.berlin25-text:hover {
		color: oklch(97.3% 0.071 103.193);
	}

	.taipei-text {
		color: rgb(153 27 27/var(--tw-bg-opacity,1));
	}

	.taipei-text:hover {
		color: rgb(252 165 165/var(--tw-bg-opacity,1));
	}

	.durham-text {
	        color: rgb(31 154 143/var(--tw-bg-opacity,1));
	}

	.durham-text:hover {
	        color: rgb(91 222 211/var(--tw-bg-opacity,1));
	}
}

